--- a/cards.html
+++ b/cards.html
@@ -16,7 +16,9 @@
     <title>Toxin - карточки</title>
   </head>
   <body class="cards-page">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big">
+      <div class="logo__big-pict"></div>
+    </div>
     <div class="container">
       <div class="cards-page__wrap">
         <div class="cards-page__row">
@@ -165,7 +167,7 @@
               <div class="auth-card__wrap">
                 <form action="/404.html">
                   <h2 class="auth-card__title">Войти</h2>
-                  <fieldset>
+                  <fieldset class="auth-card__fieldset">
                     <div class="input-group">
                       <input class="input-group__input" id="Email2" type="email" placeholder="Email"/>
                     </div>
@@ -265,10 +267,10 @@
               <div class="hotel-card__wrap  glide">
                 <div class="hotel-card__slider  glide__track" data-glide-el="track">
                   <ul class="glide__slides">
-                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
-                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
-                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
-                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-edc48d5.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-edc48d5.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-edc48d5.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-edc48d5.png" alt="Красивый отель"/></li>
                   </ul>
                   <div class="glide__arrows" data-glide-el="controls">
                     <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
@@ -312,10 +314,10 @@
               <div class="hotel-card__wrap  glide">
                 <div class="hotel-card__slider  glide__track" data-glide-el="track">
                   <ul class="glide__slides">
-                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
-                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
-                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
-                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-031f23b.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-031f23b.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-031f23b.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-031f23b.png" alt="Красивый отель"/></li>
                   </ul>
                   <div class="glide__arrows" data-glide-el="controls">
                     <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
