--- a/colors-and-type.html
+++ b/colors-and-type.html
@@ -16,7 +16,9 @@
     <title>Toxin - типографика!</title>
   </head>
   <body class="colors-and-type">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big">
+      <div class="logo__big-pict"></div>
+    </div>
     <div class="container">
       <div class="colors-and-type__wrap">
         <ul class="colors-and-type__pallete">
