--- a/form-elements.html
+++ b/form-elements.html
@@ -16,7 +16,9 @@
     <title>Toxin - элементы форм</title>
   </head>
   <body class="form-elements">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big">
+      <div class="logo__big-pict"></div>
+    </div>
     <div class="container">
       <div class="form-elements__wrap">
         <div class="form-elements__row">
@@ -316,7 +318,7 @@
           <div class="form-elements__features">
             <ul class="features">
               <li class="features__item"> 
-                <div class="features__pict"><img src="img/emoticon-379d29a.png" alt="Комфорт"/></div>
+                <div class="features__pict"><img src="img/emoticon-fc9db86.png" alt="Комфорт"/></div>
                 <section class="features__content">
                   <h2 class="features__title">Комфорт</h2>
                   <p class="features__descr">Шумопоглощающие стены</p>
@@ -334,7 +336,7 @@
           <div class="form-elements__comment">
             <div class="comment">
               <div class="comment__wrap">
-                <div class="comment__pict"><img src="img/murad-1eb8d7f.png" alt="Мурад Сарафанов"/></div>
+                <div class="comment__pict"><img src="img/murad-5e1e291.png" alt="Мурад Сарафанов"/></div>
                 <div class="likebtn">
                   <p class="likebtn__item  likebtn__item--active">
                     <button type="button">12</button>
