--- a/headers-and-footers.html
+++ b/headers-and-footers.html
@@ -16,7 +16,9 @@
     <title>Toxin - шапки и подвалы!</title>
   </head>
   <body class="headers-and-footers">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big">
+      <div class="logo__big-pict"></div>
+    </div>
     <div class="headers-and-footers__wrap">
       <div class="headers-and-footers__item">
         <header class="page-header">
